# kamiwayland

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: KLFetch.cmake
examples/: CMakeLists.txt  README.md
examples/01_list_globals/: CMakeLists.txt  main.cpp
examples/02_shm_window/: CMakeLists.txt  main.cpp
examples/03_bouncy_box/: CMakeLists.txt  main.cpp
scanner/: codegen.cpp  codegen.cppm  kscanner.cppm  main.cpp  parser.cppm
src/: connection.cppm  display.cppm  kamiwayland.cppm  wire.cppm
